--- a/demo/basic.html
+++ b/demo/basic.html
@@ -5,14 +5,16 @@
 		<title>Keyboard Demo</title>
 	</head>
 	<body>
-		<keyboard chars="abc">
+		<keyboard chars="qwertyuiop{clear:clear}|asdfghjkl{backspace:backspace}|zxcvbnm{space:space}" :value.sync="input"></keyboard>
+		<p>{{ input }}</p>
 
 		<script src="../bower_components/vue/dist/vue.min.js"></script>
 		<script src="../src/vue-keyboard.js"></script>
 
 		<script>
 			var app = new Vue({
-				el: 'body'
+				el: 'body',
+				input: ''
 			});
 		</script>
 	</body>
