--- a/demo/basic.html
+++ b/demo/basic.html
@@ -5,7 +5,7 @@
 		<title>Keyboard Demo</title>
 	</head>
 	<body>
-		<keyboard chars="qwertyuiop{clear:clear}|asdfghjkl{backspace:backspace}|zxcvbnm{space:space}" :value.sync="input"></keyboard>
+		<keyboard chars="qwertyuiop{clear:clear}|asdfghjkl{backspace:backspace}|zxcvbnm|{space:space}" :value.sync="input"></keyboard>
 		<p>{{ input }}</p>
 
 		<script src="../bower_components/vue/dist/vue.min.js"></script>
