--- a/demo/basic.html
+++ b/demo/basic.html
@@ -9,7 +9,7 @@
 		<p>{{ input }}</p>
 
 		<script src="../bower_components/vue/dist/vue.min.js"></script>
-		<script src="../src/vue-keyboard.js"></script>
+		<script src="../dist/vue-keyboard.js"></script>
 
 		<script>
 			var app = new Vue({
