--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Keyboard Demo</title>
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Itim">
-		<link rel="stylesheet" href="../dist/vue-keyboard.css">
+		<link rel="stylesheet" href="./dist/vue-keyboard.css">
 
 		<style>
 			body {
@@ -13,8 +13,11 @@
 				text-align: center;
 			}
 
+			header, footer {
+				padding: 50px 0;
+			}
+
 			h1 {
-				margin: 50px 0;
 				font-weight: normal;
 			}
 			
@@ -39,19 +42,35 @@
 			small {
 				color: #999;
 			}
+
+			a {
+				color: #05C;
+				text-decoration: none;
+			}
+
+			a:hover {
+				text-decoration: underline;
+			}
 		</style>
 	</head>
 	<body>
-		<main>
+		<header>
 			<h1>Vue Keyboard</h1>
+		</header>
 
+		<main>
 			<p><pre>{{ input }}</pre></p>
 			<p><small>{{ 16 - input.length }} char(s) left</small></p>
+
 			<keyboard v-model="input" @append="append" @custom="custom" chars="qwertyuiop{bksp:backspace}|asdfghjkl|zxcvbnm|{space:space}{custom:custom}" :maxlength="16"></keyboard>
 		</main>
 
+		<footer>
+			<a href="https://github.com/MartyWallace/vue-keyboard">GitHub</a>
+		</footer>
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.0.3/vue.js"></script>
-		<script src="../dist/vue-keyboard.js"></script>
+		<script src="./dist/vue-keyboard.js"></script>
 
 		<script>
 			var app = new Vue({
