--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 			a:hover {
 				text-decoration: underline;
 			}
+
+			.vue-keyboard .action-backspace {
+				background: #C00;
+				color: #FFF;
+			}
 		</style>
 	</head>
 	<body>
