Prevent accidental form submissions.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				text-decoration: underline;
 			}
 
-			.vue-keyboard .action-backspace {
+			.vue-keyboard button[data-text="delete"] {
 				background: #C00;
 				color: #FFF;
 			}
