Correctly implemented v-model binding using props instead of data for 'value'.

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
 				<p class="example-keyboard">
 					<div class="value">{{ input }}</div>
-					<keyboard v-model="input" layouts="123|456|789|0"></keyboard>
+					<keyboard v-model="input" layouts="123|456|789|0" value="blah"></keyboard>
 				</p>
 			</section>
 
